@@ -3,6 +3,7 @@ v4.0-dev:
   * add source subcommand to calculate sorce spectra and derive source parameters including moment magnitude with the help of previous results
   * add command line arguments to dump opt and fit pkl files for later plotting
   * add command line arguments to turn all ploting on or off
+  * add option to plot uniform color in sds plot, do not sort events by event id in all_sds plot
 v3.0:
   * prefix option is more stringent now and adds prefix also to log file
   * add option to filter event catalog, add option to resolve full SEED id, add corresponding command line options
